--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -3,10 +3,15 @@
 
 .Profile {
     width: 100%;
-    border-radius: 2em
+    border-radius: 2em;
+    margin-top: 0.5em;
 }
 
 .Socials {
     color: #{$spanish-blue};
     margin-right: 0.5em;
+}
+
+.Socials:hover {
+    color: #{$pacific-blue};
 }
