--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -5,6 +5,8 @@
     width: 100%;
     border-radius: 2em;
     margin-top: 0.5em;
+    box-shadow: 0 0 10em rgb(1, 111, 185, 0.25);
+    border: 2px solid rgb(1, 111, 185, 0.25);
 }
 
 .Socials {
