feature: add content to experience and about, update photo, minor theming fixes

--- a/src/styles/aboutMe.scss
+++ b/src/styles/aboutMe.scss
@@ -35,3 +35,9 @@
         margin-right: 6em;
     }
 }
+
+@include media-breakpoint-down(sm) {
+    .aboutMeContent {
+        margin-top: 0.5em;
+    }
+}
